# begin

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  targets.py
.github/workflows/: code-quality.yml  flake8.yml  publish.yml  style.yml  tests.yml
begin/: __init__.py  constants.py  exceptions.py  recipes.py  registry.py  targets.py  utils.py
begin/cli/: cli.py  parser.py
release_notes/: 1.fix  10.fix  13.fix  15.feat  17.feat  19.feat  2.feat  25.feat  28.fix  4.feat  5.feat  6.feat  7.feat  9.fix
tests/: conftest.py
tests/begin/: test_exceptions.py  test_recipes.py  test_registry.py  test_utils.py
tests/begin/cli/: test_cli.py  test_parser.py
tests/resources/: factory.py
tests/resources/target_files/cwd/: app.py
tests/resources/target_files/cwd/sub_dir/: sub_dir_targets.py
tests/resources/target_files/cwd/sub_dir.py/: sub_dir_targets.py
tests/resources/target_files/home/.begin/: targets.py
tests/resources/target_files/home/.begin/sub_dir/: sub_dir_targets.py  targets.js
tests/resources/target_files/home/other_dir/: other_dir_targets.py
tests/resources/target_files/override/: targets.py
