[tool.poetry]
name = "begin-cli"
version = "0.0.1"
description = "A utility for running targets in a targets.py file"
authors = ["Lachlan Marnham"]
maintainers = ["Lachlan Marnham"]
license = "MIT"
repository="https://github.com/LachlanMarnham/begin"
homepage="https://github.com/LachlanMarnham/begin"
readme = "README.md"
include = [
    "LICENSE",
]
packages = [
    { include = "begin" },
]

[tool.poetry.dependencies]
python = "~3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
flake8-commas = "^2.0"
flake8-isort = "^2.7"
flake8-quotes = "^2.1"
isort = "^4.3"
pytest = "^4.3"
pytest-cov = "^2.8"
pytest-env = "^0.6"
pytest-random-order = "^1.0"
bump2version = "^0.5"
changelog-gen = "~0.5.0"

[tool.poetry.scripts]
begin = 'begin.cli.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
